updated references and citations

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 
 <body id="index_body">
-  <!-- Navigation Section -->
+  <!-- ########## Navigation Section ########## -->
   <nav class="navbar">
     <div class="navbar__container">
       <header>
@@ -57,11 +57,11 @@
       </ul>
     </div>
   </nav>
-  <!-- Content -->
+  <!-- ########## Content ########## -->
   <article class="index_container">
     <h1>What is <br> Voice Technology</h1>
     <figure id="index_fig">
-      <img id="index_img" src="/images/vt1.jpg" alt="voice technology"/>
+      <a href="topic.html#15"><img id="index_img" src="/images/vt1.jpg" alt="voice technology"/></a>
       <p>
         There is a vast difference in today's world of technologies compared to a decade ago. Adaptations of technology
         to the human lifestyle has come a long way, specially with <strong>Voice Technology</strong>, with its biggest
@@ -71,7 +71,7 @@
       </p>
     </figure>
   </article>
-  <!-- Footer Section -->
+  <!-- ########## Footer Section ########## -->
   <footer>
     <article>
       <h3 id="footer_h3">Swinburne University of Technology &#169; | Assignment 1 </h3>
