--- a/topic.html
+++ b/topic.html
@@ -33,7 +33,7 @@
 
 <body class="topic_body">
 
-      <!-- Navigation Section -->
+      <!-- ########## Navigation Section ########## -->
 
       <nav class="navbar">
             <div class="navbar__container">
@@ -71,7 +71,7 @@
             <a href="#references" id="c">References</a>
       </div>
 
-      <!-- Content -->
+      <!-- ########## Content ########## -->
       <article class="topic_content">
             <h1>More on Voice Technology</h1>
             <section id="purpose">
@@ -81,6 +81,9 @@
                               Software</em> are programs that can recognise and record audible commands of the human
                         language and translate them into code i.e. computer language, that can interact with other
                         programs.
+                        <a href="#1">[1]</a>
+                        <a href="#2">[2]</a>
+                        <a href="#3">[3]</a>
                   </p>
                   <aside>
                         <h3>Uses:</h3>
@@ -132,9 +135,9 @@
                         that could record sound and play it back. This decide was created on 4th December, 1877.
                   </p>
                   <figure>
-                        <img src="/images/history.jpg" alt="history development of voice technology">
+                        <img id="d_img" src="/images/history.jpg" alt="history development of voice technology">
                         <figcaption>
-                              History Development of Voice Technology
+                              History Development of Voice Technology <a href="#16">[16]</a>
                         </figcaption>
                   </figure>
                   <p>
@@ -143,20 +146,24 @@
                         by <em>Homer Dudley</em> in 1936 as an attempt to further communication technology. The first
                         real voice recognition software was also made by <em>Bell Labs</em>, who created
                         <strong>Audrey</strong>, a program capable of recognising the digits from 0 to 9 with 90%
-                        accuracy.
+                        accuracy. 
+                        <a href="#4">[4]</a>
+                        <a href="#5">[5]</a>
                   </p>
             </section>
             <section id="management">
                   <h2>Management</h2>
-                  <h3>
+                  <p>
                         It's a competitive and open market. There is no central body which governs voice recognition
                         technology. However, there are prominent developers and companies that contribute tremendously
-                        in the field, such as:
-                  </h3>
+                        in the field, such as: 
+                        <a href="3">[3]</a>
+                        <a href="#7"></a>
+                  </p>
                   <dl>
                         <dt>Nuance Communication</dt>
                         <dd>uses AI and voice technology to support multiple industries i.e. healthcare, telecom,
-                              financial services, etc.</dd>
+                              financial services, etc. <a href="#6">[6]</a></dd>
                         <dt>Google LLC</dt>
                         <dd>home automation using voice technology via <em>Google Assistant</em></dd>
                         <dt>Amazon</dt>
@@ -189,7 +196,7 @@
                   <h2>Growth and Future</h2>
                   <figure class="growth_fig">
                         <img id="g_img" src="/images/vt2.jpg" alt="">
-                        <figcaption>Speechmatics Report Trends Predictions Voice Technology 2021</figcaption>
+                        <figcaption>Speechmatics Report Trends Predictions Voice Technology 2021 <a href="#14">[14]</a></figcaption>
                   </figure>
                   <p>
                         <strong>Voice technology</strong> has come a long way developing to the adaptations of ever
@@ -207,13 +214,19 @@
                         leaning towards the digital world, indsutries are now widely adopting this era, where voice
                         technology benefits businesses' capability to generate revenue, improve efficiency and increase
                         productivity. According to the <em>Industry Report: Trends and Predictions for Voice Technology
-                              in 2021</em> by Speechmatics, 68% of respondents currently have voice strategy in place in
+                        in 2021</em> by Speechmatics, 68% of respondents currently have voice strategy in place in
                         their company compared with 50% in 2020. Those who doesn't have voice strategy, 60% said that it
                         is something they will consider in the next 5 years. With the pandemic <em>COVID-19</em> hitting
                         globally, companies are more inclines to shift into voice technology, where many industries like
                         media and entertaiinment, banking, financial services, insurance, healthcare and life sciences,
                         education, government, etc have proven that voice technology's capabilities are limitless, and
-                        there is no stopping it.
+                        there is no stopping it. 
+                        <a href="#8">[8]</a>
+                        <a href="#9">[9]</a>
+                        <a href="#10">[10]</a>
+                        <a href="#11">[11]</a>
+                        <a href="#12">[12]</a>
+                        <a href="#13">[13]</a>
                   </p>
 
             </section>
@@ -226,81 +239,116 @@
                         These biometric features are used for security reasons and identifying other people. Compared to
                         voice technology, these other biometric signatures are not able to convey orders and information
                         as effectively as human speech can.
+                        <a href="#17">[17]</a>
+                        <a href="#18">[18]</a>
+                        <a href="#19">[19]</a>
                   </p>
                   <figure class="r_fig">
-                        <img id="r_img" src="/images/vt.jpg" alt="">
-                        <figcaption>AI relates to voice technology</figcaption>
+                        <img id="r_img" src="/images/vt.jpeg" alt="">
+                        <figcaption>Voice Recognition as Biometric Identification of a Person<a href="#15">[15]</a></figcaption>
                   </figure>
             </section>
             <section id="references">
                   <h2>References</h2>
                   <h4>Information</h4>
                   <ol class="ref">
-                        <li>
-                              <a href="https://www.verizon.com/articles/speech-recognition-technology/"><em>A Guide to Voice-activated Technology</em> (2022)</a>
+                        <li id="1">
+                              <a href="https://www.verizon.com/articles/speech-recognition-technology/"><em>A Guide to
+                                          Voice-activated Technology</em> (2022)</a>
                         </li>
-                        <li>
-                              <a href="https://medium.com/swlh/voice-technology-shaping-the-future-of-website-development-1e7feb99af5f">Sadia, Mehmood (2021) <em>Voice Technology — Shaping the Future of Website Development </em></a>
+                        <li id="2">
+                              <a
+                                    href="https://medium.com/swlh/voice-technology-shaping-the-future-of-website-development-1e7feb99af5f">Sadia,
+                                    Mehmood (2021) <em>Voice Technology — Shaping the Future of Website Development
+                                    </em></a>
                         </li>
-                        <li>
-                              <a href="https://www.softwaretestinghelp.com/voice-recognition-software/#:~:text=Best%20Voice%20Recognition%20Software%20Reviews%201%20Dragon%20Professional.,version%20is%20available%20at%20a%20price%20of%20%249.99."><em>10 Best Voice Recognition Software (Speech Recognition In 2022)</em></a>
+                        <li id="3">
+                              <a
+                                    href="https://www.softwaretestinghelp.com/voice-recognition-software/#:~:text=Best%20Voice%20Recognition%20Software%20Reviews%201%20Dragon%20Professional.,version%20is%20available%20at%20a%20price%20of%20%249.99."><em>10
+                                          Best Voice Recognition Software (Speech Recognition In 2022)</em></a>
                         </li>
-                        <li>
-                              <a href="https://www.loc.gov/collections/edison-company-motion-pictures-and-sound-recordings/articles-and-essays/history-of-edison-sound-recordings/history-of-the-cylinder-phonograph/"><em>History of the Cylinder Phonograph. </em></a>
+                        <li id="4">
+                              <a
+                                    href="https://www.loc.gov/collections/edison-company-motion-pictures-and-sound-recordings/articles-and-essays/history-of-edison-sound-recordings/history-of-the-cylinder-phonograph/"><em>History
+                                          of the Cylinder Phonograph. </em></a>
                         </li>
-                        <li>
-                              <a href="https://www.pcworld.com/article/477914/speech_recognition_through_the_decades_how_we_ended_up_with_siri.html">Pinola, Melanie. (2011). <em>Speech Recognition Through the Decades: How We Ended Up With </em></a>
+                        <li id="5">
+                              <a
+                                    href="https://www.pcworld.com/article/477914/speech_recognition_through_the_decades_how_we_ended_up_with_siri.html">Pinola,
+                                    Melanie. (2011). <em>Speech Recognition Through the Decades: How We Ended Up With
+                                    </em></a>
                         </li>
-                        <li>
+                        <li id="6">
                               <a href="https://www.nuance.com/healthcare.html">Nuance</a>
                         </li>
-                        <li>
-                              <a href="https://meticulousblog.org/top-10-companies-in-speech-and-voice-recognition-market/#:~:text=Top%2010%20Companies%20in%20Speech%20and%20Voice%20Recognition,7%20Sensory%2C%20Inc.%20%28U.S.%29%208%20LumenVox%20LLC%20%28U.S.%29"><em>Top 10 Companies in speech and voice recognition market. </em>(2022).</a>
+                        <li id="7">
+                              <a
+                                    href="https://meticulousblog.org/top-10-companies-in-speech-and-voice-recognition-market/#:~:text=Top%2010%20Companies%20in%20Speech%20and%20Voice%20Recognition,7%20Sensory%2C%20Inc.%20%28U.S.%29%208%20LumenVox%20LLC%20%28U.S.%29"><em>Top
+                                          10 Companies in speech and voice recognition market. </em>(2022).</a>
                         </li>
-                        <li>
-                              <a href="https://assets.ctfassets.net/yze1aysi0225/OPz6aOOzFGsbI5diUIimr/dc2e03b03cf710089c4e018f6192edf9/Speechmatics-Report-Trends-Predictions-Voice-Technology-2021.pdf"><em>Trends and predictions for voice technology in 2021.</em> (2021)</a>
+                        <li id="8">
+                              <a
+                                    href="https://assets.ctfassets.net/yze1aysi0225/OPz6aOOzFGsbI5diUIimr/dc2e03b03cf710089c4e018f6192edf9/Speechmatics-Report-Trends-Predictions-Voice-Technology-2021.pdf"><em>Trends
+                                          and predictions for voice technology in 2021.</em> (2021)</a>
                         </li>
-                        <li>
-                              <a href="https://summalinguae.com/language-technology/speech-recognition-software-history-future/"><em>Speech Recognition Software: Past, Present, and Future. (2021). </em></a>
+                        <li id="9">
+                              <a
+                                    href="https://summalinguae.com/language-technology/speech-recognition-software-history-future/"><em>Speech
+                                          Recognition Software: Past, Present, and Future. (2021). </em></a>
                         </li>
-                        <li>
-                              <a href="https://www.dbswebsite.com/blog/trends-in-voice-search/"><em>Voice Search Statistics and Emerging Trends.</em> 2021</a>
+                        <li id="10">
+                              <a href="https://www.dbswebsite.com/blog/trends-in-voice-search/"><em>Voice Search
+                                          Statistics and Emerging Trends.</em> 2021</a>
                         </li>
-                        <li>
-                              <a href="https://masterofcode.com/blog/9-key-predictions-for-the-future-of-voice-assistants"><em>9 Key Predictions for the Future Of Voice Assistants.</em> (2021)</a>
+                        <li id="11">
+                              <a
+                                    href="https://masterofcode.com/blog/9-key-predictions-for-the-future-of-voice-assistants"><em>9
+                                          Key Predictions for the Future Of Voice Assistants.</em> (2021)</a>
                         </li>
-                        <li>
-                              <a href="https://www.linkedin.com/pulse/top-voice-technology-trends-2021-pharynxai/?trk=organization-update-content_share-article"><em>Top Voice Technology Trends in 2021.</em> (2021)</a>
+                        <li id="12">
+                              <a
+                                    href="https://www.linkedin.com/pulse/top-voice-technology-trends-2021-pharynxai/?trk=organization-update-content_share-article"><em>Top
+                                          Voice Technology Trends in 2021.</em> (2021)</a>
                         </li>
-                        <li>
-                              <a href="https://vogovoice.com/blog/introduction-to-voice-technology/"><em>A Basic Introduction to Voice Technology.</em>(2020)</a>
+                        <li id="13">
+                              <a href="https://vogovoice.com/blog/introduction-to-voice-technology/"><em>A Basic
+                                          Introduction to Voice Technology.</em>(2020)</a>
                         </li>
-                  </ol>
-                  <h4>Images:</h4>
-                  <ol class="ref">
-                        <li>
-                              <a href="https://assets.ctfassets.net/yze1aysi0225/OPz6aOOzFGsbI5diUIimr/dc2e03b03cf710089c4e018f6192edf9/Speechmatics-Report-Trends-Predictions-Voice-Technology-2021.pdf">Speechmatics, <em>Speech Recognition Software: Past, Present, and Future</em></a>
+                        <li id="14">
+                              <a
+                                    href="https://assets.ctfassets.net/yze1aysi0225/OPz6aOOzFGsbI5diUIimr/dc2e03b03cf710089c4e018f6192edf9/Speechmatics-Report-Trends-Predictions-Voice-Technology-2021.pdf">Speechmatics,
+                                    <em>Speech Recognition Software: Past, Present, and Future</em></a>
                         </li>
-                        <li>
-                              <a href="https://rezaid.co.uk/voice-technology-importance/">Kelly Bowers, '[Importance of Voice Technology]'[images], in Kelly Bowers 2019, <em>Why is Voice Technology Important for your Business?</em>, Rezaid</a>
+                        <li id="15">
+                              <a href="https://rezaid.co.uk/voice-technology-importance/">Kelly Bowers, '[Importance of
+                                    Voice Technology]'[images], in Kelly Bowers 2019, <em>Why is Voice Technology
+                                          Important for your Business?</em>, Rezaid</a>
                         </li>
-                        <li>
-                              <a href="https://info.keylimeinteractive.com/history-of-voice-technology">Samantha Silver, '[History of Voice Tech]'[image], in Samantha Silver 2020, <em>A History of Voice Technology</em>, Key Lime Interactive</a>
+                        <li id="16">
+                              <a href="https://info.keylimeinteractive.com/history-of-voice-technology">Samantha Silver,
+                                    '[History of Voice Tech]'[image], in Samantha Silver 2020, <em>A History of Voice
+                                          Technology</em>, Key Lime Interactive</a>
                         </li>
-                        <li>
-                              <a href="https://www.sciencedirect.com/topics/computer-science/biometric-technology"><em>Biometric Technology.</em></a>
+                        <li id="17">
+                              <a href="https://www.sciencedirect.com/topics/computer-science/biometric-technology"><em>Biometric
+                                          Technology.</em></a>
                         </li>
-                        <li>
-                              <a href="https://www.sciencedirect.com/topics/computer-science/biometric-technology"><em>What is Biometrics? How is it used in security?.</em></a>
+                        <li id="18">
+                              <a href="https://www.sciencedirect.com/topics/computer-science/biometric-technology"><em>What
+                                          is Biometrics? How is it used in security?.</em></a>
                         </li>
-                        <li>
-                              <a href="https://www.biometricsinstitute.org/what-is-biometrics/types-of-biometrics/"><em>Types of Biometrics. </em></a>
+                        <li id="19">
+                              <a href="https://www.biometricsinstitute.org/what-is-biometrics/types-of-biometrics/"><em>Types
+                                          of Biometrics. </em></a>
+                        </li>
+                        <li id="20">
+                              <a href="https://www.dreamstime.com/voice-recognition-biometric-identification-person-face-id-fingerprint-voice-recognition-biometric-identification-person-face-image129587547"><em>Voice recognition. Biometric Identification of Person. Face ID fingerprint</em></a>
                         </li>
                   </ol>
             </section>
       </article>
 
-      <!-- Footer -->
+      <!-- ########## Footer ########## -->
       <footer>
             <article>
                   <h3 id="footer_h3">Swinburne University of Technology &#169; | Assignment 1 </h3>
