--- a/topic.html
+++ b/topic.html
@@ -195,7 +195,7 @@
             <section id="growth">
                   <h2>Growth and Future</h2>
                   <figure class="growth_fig">
-                        <img id="g_img" src="/images/vt2.jpg" alt="">
+                        <img id="g_img" src="/images/vt2.jpg" alt="Percentage on improvements and changes to the technology">
                         <figcaption>Speechmatics Report Trends Predictions Voice Technology 2021 <a href="#14">[14]</a></figcaption>
                   </figure>
                   <p>
@@ -244,7 +244,7 @@
                         <a href="#19">[19]</a>
                   </p>
                   <figure class="r_fig">
-                        <img id="r_img" src="/images/vt.jpeg" alt="">
+                        <img id="r_img" src="/images/vt.jpeg" alt="voice recognition as a biometric indentification of a person">
                         <figcaption>Voice Recognition as Biometric Identification of a Person<a href="#15">[15]</a></figcaption>
                   </figure>
             </section>
