consistency between pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Voice Technology | Home</title>
   <!-- References to external CSS files-->
-  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="/styles/style.css">
   <!-- References to external fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -68,6 +68,9 @@
         developments only emerging in the recent years. With voice technology being easily accessible, it has reach more
         consumers and concerns are inevitable. Despite of this, the potential of voice technology is apparent, and its
         growth is not stopping anytime soon.
+      </p>
+      <p id="youtube">
+        <a href="https:www.youtube.com" target="_blank">Group 18 Short Video</a>
       </p>
     </figure>
   </article>
