--- a/quiz.html
+++ b/quiz.html
@@ -10,7 +10,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
       <!-- References to external CSS files-->
-      <link rel="stylesheet" href="/styles/styles.css">
+      <link rel="stylesheet" href="/styles/style.css">
 
       <!-- References to external fonts -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +18,7 @@
       <!-- Sigmar Once font -->
       <link href="https://fonts.googleapis.com/css2?family=Sigmar+One&display=swap" rel="stylesheet">
       <!-- Yanone Kaffeesatz font -->
-      <link href="https://fonts.googleapis.com/css2?family=Sigmar+ÍOne&family=Yanone+Kaffeesatz:wght@600&display=swap"
+      <link href="https://fonts.googleapis.com/css2?family=Sigmar+One&family=Yanone+Kaffeesatz:wght@600&display=swap"
             rel="stylesheet">
       <!-- Roboto font-->
       <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -31,9 +31,9 @@
       <link rel="stylesheet" href="/styles/responsive.css" media="screen and (max-width: 1024px)">
 </head>
 
-<body id="quiz_body">
+<body class="quiz_body">
 
-      <!-- Navigation Section -->
+      <!-- ########## Navigation Section ########## -->
 
       <nav class="navbar">
             <div class="navbar__container">
@@ -62,7 +62,7 @@
       </nav>
 
       <!-- Content -->
-      <section class="quiz_content">
+      <article class="quiz_content">
             <form action="https://mercury.swin.edu.au/it000000/formtest.php" method="post">
                   <fieldset id="idsec">
                         <legend class="f_section"> Registration </legend>
@@ -174,7 +174,7 @@
                   </p>
 
             </form>
-      </section>
+      </article>
 
       <!-- Footer -->
       <footer>
