--- a/enhancements.html
+++ b/enhancements.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Voice Technology | Enhancements</title>
   <!-- References to external CSS files-->
-  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="/styles/style.css">
   <!-- References to external fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -87,7 +87,8 @@
       <ol class="examples">
         <li><a href="topic.html#sidenav">Side Navigation</a></li>
       </ol>
-
+    </section>
+    <section class="ex">
       <h4>Create Tabbed Menu:</h4>
       <samp>
         .q_sect article { <br>
@@ -102,7 +103,8 @@
       <ol class="examples">
         <li><a href="quiz.html#quiznav">Quiz Navigation Tabs for the questions</a></li>
       </ol>
-
+    </section>
+    <section class="ex">
       <h4>Responsive Navigation Bar:</h4>
       <samp class="navbar_codes">
         .navbar__toggle .bar { <br>
