--- a/topic.html
+++ b/topic.html
@@ -10,7 +10,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
       <!-- References to external CSS files-->
-      <link rel="stylesheet" href="/styles/styles.css">
+      <link rel="stylesheet" href="/styles/style.css">
 
       <!-- References to external fonts -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -253,96 +253,96 @@
                   <h4>Information</h4>
                   <ol class="ref">
                         <li id="1">
-                              <a href="https://www.verizon.com/articles/speech-recognition-technology/"><em>A Guide to
+                              <a href="https://www.verizon.com/articles/speech-recognition-technology/" target="_blank"><em>A Guide to
                                           Voice-activated Technology</em> (2022)</a>
                         </li>
                         <li id="2">
                               <a
-                                    href="https://medium.com/swlh/voice-technology-shaping-the-future-of-website-development-1e7feb99af5f">Sadia,
+                                    href="https://medium.com/swlh/voice-technology-shaping-the-future-of-website-development-1e7feb99af5f" target="_blank">Sadia,
                                     Mehmood (2021) <em>Voice Technology — Shaping the Future of Website Development
                                     </em></a>
                         </li>
                         <li id="3">
                               <a
-                                    href="https://www.softwaretestinghelp.com/voice-recognition-software/#:~:text=Best%20Voice%20Recognition%20Software%20Reviews%201%20Dragon%20Professional.,version%20is%20available%20at%20a%20price%20of%20%249.99."><em>10
+                                    href="https://www.softwaretestinghelp.com/voice-recognition-software/#:~:text=Best%20Voice%20Recognition%20Software%20Reviews%201%20Dragon%20Professional.,version%20is%20available%20at%20a%20price%20of%20%249.99." target="_blank"><em>10
                                           Best Voice Recognition Software (Speech Recognition In 2022)</em></a>
                         </li>
                         <li id="4">
                               <a
-                                    href="https://www.loc.gov/collections/edison-company-motion-pictures-and-sound-recordings/articles-and-essays/history-of-edison-sound-recordings/history-of-the-cylinder-phonograph/"><em>History
+                                    href="https://www.loc.gov/collections/edison-company-motion-pictures-and-sound-recordings/articles-and-essays/history-of-edison-sound-recordings/history-of-the-cylinder-phonograph/" target="_blank"><em>History
                                           of the Cylinder Phonograph. </em></a>
                         </li>
                         <li id="5">
                               <a
-                                    href="https://www.pcworld.com/article/477914/speech_recognition_through_the_decades_how_we_ended_up_with_siri.html">Pinola,
+                                    href="https://www.pcworld.com/article/477914/speech_recognition_through_the_decades_how_we_ended_up_with_siri.html" target="_blank">Pinola,
                                     Melanie. (2011). <em>Speech Recognition Through the Decades: How We Ended Up With
                                     </em></a>
                         </li>
                         <li id="6">
-                              <a href="https://www.nuance.com/healthcare.html">Nuance</a>
+                              <a href="https://www.nuance.com/healthcare.html" target="_blank">Nuance</a>
                         </li>
                         <li id="7">
                               <a
-                                    href="https://meticulousblog.org/top-10-companies-in-speech-and-voice-recognition-market/#:~:text=Top%2010%20Companies%20in%20Speech%20and%20Voice%20Recognition,7%20Sensory%2C%20Inc.%20%28U.S.%29%208%20LumenVox%20LLC%20%28U.S.%29"><em>Top
+                                    href="https://meticulousblog.org/top-10-companies-in-speech-and-voice-recognition-market/#:~:text=Top%2010%20Companies%20in%20Speech%20and%20Voice%20Recognition,7%20Sensory%2C%20Inc.%20%28U.S.%29%208%20LumenVox%20LLC%20%28U.S.%29" target="_blank"><em>Top
                                           10 Companies in speech and voice recognition market. </em>(2022).</a>
                         </li>
                         <li id="8">
                               <a
-                                    href="https://assets.ctfassets.net/yze1aysi0225/OPz6aOOzFGsbI5diUIimr/dc2e03b03cf710089c4e018f6192edf9/Speechmatics-Report-Trends-Predictions-Voice-Technology-2021.pdf"><em>Trends
+                                    href="https://assets.ctfassets.net/yze1aysi0225/OPz6aOOzFGsbI5diUIimr/dc2e03b03cf710089c4e018f6192edf9/Speechmatics-Report-Trends-Predictions-Voice-Technology-2021.pdf" target="_blank"><em>Trends
                                           and predictions for voice technology in 2021.</em> (2021)</a>
                         </li>
                         <li id="9">
                               <a
-                                    href="https://summalinguae.com/language-technology/speech-recognition-software-history-future/"><em>Speech
+                                    href="https://summalinguae.com/language-technology/speech-recognition-software-history-future/" target="_blank"><em>Speech
                                           Recognition Software: Past, Present, and Future. (2021). </em></a>
                         </li>
                         <li id="10">
-                              <a href="https://www.dbswebsite.com/blog/trends-in-voice-search/"><em>Voice Search
+                              <a href="https://www.dbswebsite.com/blog/trends-in-voice-search/" target="_blank"><em>Voice Search
                                           Statistics and Emerging Trends.</em> 2021</a>
                         </li>
                         <li id="11">
                               <a
-                                    href="https://masterofcode.com/blog/9-key-predictions-for-the-future-of-voice-assistants"><em>9
+                                    href="https://masterofcode.com/blog/9-key-predictions-for-the-future-of-voice-assistants" target="_blank"><em>9
                                           Key Predictions for the Future Of Voice Assistants.</em> (2021)</a>
                         </li>
                         <li id="12">
                               <a
-                                    href="https://www.linkedin.com/pulse/top-voice-technology-trends-2021-pharynxai/?trk=organization-update-content_share-article"><em>Top
+                                    href="https://www.linkedin.com/pulse/top-voice-technology-trends-2021-pharynxai/?trk=organization-update-content_share-article" target="_blank"><em>Top
                                           Voice Technology Trends in 2021.</em> (2021)</a>
                         </li>
                         <li id="13">
-                              <a href="https://vogovoice.com/blog/introduction-to-voice-technology/"><em>A Basic
+                              <a href="https://vogovoice.com/blog/introduction-to-voice-technology/" target="_blank"><em>A Basic
                                           Introduction to Voice Technology.</em>(2020)</a>
                         </li>
                         <li id="14">
                               <a
-                                    href="https://assets.ctfassets.net/yze1aysi0225/OPz6aOOzFGsbI5diUIimr/dc2e03b03cf710089c4e018f6192edf9/Speechmatics-Report-Trends-Predictions-Voice-Technology-2021.pdf">Speechmatics,
+                                    href="https://assets.ctfassets.net/yze1aysi0225/OPz6aOOzFGsbI5diUIimr/dc2e03b03cf710089c4e018f6192edf9/Speechmatics-Report-Trends-Predictions-Voice-Technology-2021.pdf" target="_blank">Speechmatics,
                                     <em>Speech Recognition Software: Past, Present, and Future</em></a>
                         </li>
                         <li id="15">
-                              <a href="https://rezaid.co.uk/voice-technology-importance/">Kelly Bowers, '[Importance of
+                              <a href="https://rezaid.co.uk/voice-technology-importance/" target="_blank">Kelly Bowers, '[Importance of
                                     Voice Technology]'[images], in Kelly Bowers 2019, <em>Why is Voice Technology
                                           Important for your Business?</em>, Rezaid</a>
                         </li>
                         <li id="16">
-                              <a href="https://info.keylimeinteractive.com/history-of-voice-technology">Samantha Silver,
+                              <a href="https://info.keylimeinteractive.com/history-of-voice-technology" target="_blank">Samantha Silver,
                                     '[History of Voice Tech]'[image], in Samantha Silver 2020, <em>A History of Voice
                                           Technology</em>, Key Lime Interactive</a>
                         </li>
                         <li id="17">
-                              <a href="https://www.sciencedirect.com/topics/computer-science/biometric-technology"><em>Biometric
+                              <a href="https://www.sciencedirect.com/topics/computer-science/biometric-technology" target="_blank"><em>Biometric
                                           Technology.</em></a>
                         </li>
                         <li id="18">
-                              <a href="https://www.sciencedirect.com/topics/computer-science/biometric-technology"><em>What
+                              <a href="https://www.sciencedirect.com/topics/computer-science/biometric-technology" target="_blank"><em>What
                                           is Biometrics? How is it used in security?.</em></a>
                         </li>
                         <li id="19">
-                              <a href="https://www.biometricsinstitute.org/what-is-biometrics/types-of-biometrics/"><em>Types
+                              <a href="https://www.biometricsinstitute.org/what-is-biometrics/types-of-biometrics/" target="_blank"><em>Types
                                           of Biometrics. </em></a>
                         </li>
                         <li id="20">
-                              <a href="https://www.dreamstime.com/voice-recognition-biometric-identification-person-face-id-fingerprint-voice-recognition-biometric-identification-person-face-image129587547"><em>Voice recognition. Biometric Identification of Person. Face ID fingerprint</em></a>
+                              <a href="https://www.dreamstime.com/voice-recognition-biometric-identification-person-face-id-fingerprint-voice-recognition-biometric-identification-person-face-image129587547" target="_blank"><em>Voice recognition. Biometric Identification of Person. Face ID fingerprint</em></a>
                         </li>
                   </ol>
             </section>
