--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         growth is not stopping anytime soon.
       </p>
       <p id="youtube">
-        <a href="https:www.youtube.com" target="_blank">Group 18 Short Video</a>
+        <a href="https:www.youtube.com" target="_blank">Group Short Video</a>
       </p>
     </figure>
   </article>
