--- a/topic.html
+++ b/topic.html
@@ -28,7 +28,7 @@
             rel="stylesheet">
 
       <!-- References to external responsive CSS file -->
-      <link rel="stylesheet" href="/styles/responsive.css" media="screen and (max-width: 1024px)">
+      <link rel="stylesheet" href="styles/responsive.css" media="screen and (max-width: 1024px)">
 </head>
 
 <body class="topic_body">
