--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <article class="index_container">
     <h1>What is <br> Voice Technology</h1>
     <figure id="index_fig">
-      <a href="topic.html#15"><img id="index_img" src="/images/vt1.jpg" alt="voice technology"/></a>
+      <a href="topic.html#15"><img id="index_img" src="images/vt1.jpg" alt="voice technology"/></a>
       <p>
         There is a vast difference in today's world of technologies compared to a decade ago. Adaptations of technology
         to the human lifestyle has come a long way, specially with <strong>Voice Technology</strong>, with its biggest
